grammars/tree-sitter-dart/grammar.js
    source_file: ($) =>
      seq(
        optional($.script_tag),
        optional($.library_name),
        repeat($.import_or_export),
        repeat($.part_directive),
        repeat($.part_of_directive),
        repeat($._top_level_definition),
      ),

    _top_level_definition: ($) =>
      choice(
        $._declaration,
        $.function_declaration,
        $.getter_declaration,
        $.setter_declaration,
        $.external_function_declaration,
        $.external_getter_declaration,
        $.external_setter_declaration,
        $.top_level_variable_declaration,
        $.external_variable_declaration,
      ),

    // ========================================================================
    // Library structure (Phase 9)
    // ========================================================================

    _metadata: ($) => repeat1($._annotation),

    type: ($) =>
      choice(
        nullable($.function_type),
        nullable($.record_type),
        $.void_type,
        nullable(seq($._type_name, optional($.type_arguments))),
        nullable("Function"),
      ),

    _type_name: ($) =>
      seq(
        alias($.identifier, $.type_identifier),
        optional(
          prec.right(PREC.TYPE_IDENTIFIER, seq(".", alias($.identifier, $.type_identifier))),
        ),
      ),

    void_type: (_) => "void",

    true: (_) => "true",
    decimal_integer_literal: (_) =>
      token(sep1(/[0-9]+/, /_+/)),

    string_literal: ($) =>
      repeat1(
        choice(
          $.string_literal_double_quotes,
          $.string_literal_single_quotes,
          $.string_literal_double_quotes_multiple,
          $.string_literal_single_quotes_multiple,
          $.raw_string_literal_double_quotes,
          $.raw_string_literal_single_quotes,
          $.raw_string_literal_double_quotes_multiple,
          $.raw_string_literal_single_quotes_multiple,
        ),
      ),

    string_literal_single_quotes: ($) =>
      seq(
        "'",
        repeat(
          choice(
            $.template_chars_single_single,
            '"',
            $.escape_sequence,
            $._sub_string_test,
            $.template_substitution,
          ),
        ),
        "'",
      ),

    _sub_string_test: (_) => seq("$", /[^a-zA-Z_{]/),

    _element: ($) =>
      choice(
        $._expression,
        $.pair,
        $.spread_element,
        $.null_aware_element,
        $.null_aware_pair,
        $.if_element,
        $.for_element,
      ),

    record_literal: ($) =>
      seq(optional("const"), $._record_literal_no_const),

    _record_literal_no_const: ($) =>
      choice(
        seq("(", ")"),
        seq(
          "(",
          choice(
            seq($.label, $._expression, optional(",")),
            seq($._expression, ","),
            seq($.record_field, repeat1(seq(",", $.record_field)), optional(",")),
          ),
          ")",
        ),
      ),

    record_field: ($) => seq(optional($.label), $._expression),

    // ========================================================================
    // Expressions (Phase 4)
    // ========================================================================

    _expression: ($) =>
      choice(
        $.pattern_assignment,
        $.assignment_expression,
        $.throw_expression,
        seq($._real_expression, repeat($.cascade_section)),
      ),

    _real_expression: ($) =>
      choice(
        $.conditional_expression,
        $.logical_or_expression,
        $.if_null_expression,
        $.logical_and_expression,
        $.equality_expression,
        $.relational_expression,
        $.bitwise_or_expression,
        $.bitwise_xor_expression,
        $.bitwise_and_expression,
        $.shift_expression,
        $.additive_expression,
        $.multiplicative_expression,
        $.type_cast_expression,
        $.type_test_expression,
        $._unary_expression,
      ),

    // --- Throw ---

    assignable_expression: ($) =>
      choice(
        $.identifier,
        seq(
          field("object", $._postfix_expression),
          ".",
          field("property", $.identifier),
        ),
        seq(
          field("object", $._postfix_expression),
          "[",
          field("index", $._expression),
          "]",
        ),
        seq(
          field("object", $._postfix_expression),
          "?.",
          field("property", $.identifier),
        ),
        seq(
          field("object", $._postfix_expression),
          "?",
          "[",
          field("index", $._expression),
          "]",
        ),
      ),

    // --- Conditional ---

    relational_expression: ($) =>
      prec.left(
        PREC.RELATIONAL,
        choice(
          seq($._real_expression, $.relational_operator, $._real_expression),
          seq("super", $.relational_operator, $._real_expression),
        ),
      ),

    relational_operator: (_) => choice("<", ">", "<=", ">="),

    // --- Type test/cast ---

    _postfix_expression: ($) =>
      choice(
        $._primary,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.null_aware_member_expression,
        $.null_aware_index_expression,
        $.null_assertion_expression,
        $.instantiation_expression,
        $.postfix_expression,
      ),

    postfix_expression: ($) =>
      prec.right(
        seq(field("argument", $.assignable_expression), choice("++", "--")),
      ),

    call_expression: ($) =>
      prec.dynamic(1, prec("call",
        seq(
          field("function", $._postfix_expression),
          field("arguments", $.arguments),
        ),
      )),

    // Named prec required so the `<` ambiguity (call/instantiation/relational)
    // falls through to GLR conflict declarations rather than being auto-resolved.
    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    arguments: ($) => seq("(", optional($._argument_list), ")"),

    _argument_list: ($) =>
      prec.right(commaSep1TrailingComma(choice($.named_argument, $._expression))),

    _formal_parameter_part: ($) =>
      seq(optional($.type_parameters), $.formal_parameter_list),

    formal_parameter_list: ($) =>
      choice(
        seq("(", ")"),
        seq("(", $._normal_formal_parameters, optional(","), ")"),
        seq(
          "(",
          $._normal_formal_parameters,
          ",",
          $.optional_formal_parameters,
          ")",
        ),
        seq("(", $.optional_formal_parameters, ")"),
      ),

    _normal_formal_parameters: ($) => commaSep1($.formal_parameter),

    formal_parameter: ($) => $._normal_formal_parameter,

    _normal_formal_parameter: ($) =>
      seq(
        optional($._metadata),
        choice(
          $._function_formal_parameter,
          $._simple_formal_parameter,
          $.constructor_param,
          $.super_formal_parameter,
        ),
      ),

    _declared_identifier: ($) =>
      seq(
        optional("covariant"),
        $._final_const_var_or_type,
        field("name", $.identifier),
      ),

    constructor_param: ($) =>
      seq(
        optional($._final_const_var_or_type),
        "this",
        ".",
        $.identifier,
        optional(seq($._formal_parameter_part, optional("?"))),
      ),

    _statement: ($) =>
      choice(
        $.block,
        prec.dynamic(1, $.local_function_declaration),
        prec.dynamic(2, $.local_variable_declaration),
        $.for_statement,
        $.while_statement,
        $.do_statement,
        $.switch_statement,
        $.if_statement,
        $.try_statement,
        $.break_statement,
        $.continue_statement,
        $.rethrow_statement,
        $.return_statement,
        $.yield_statement,
        $.yield_each_statement,
        $.expression_statement,
        $.assert_statement,
        $.labeled_statement,
        $.empty_statement,
      ),

    empty_statement: (_) => ";",

    block: ($) => seq("{", repeat($._statement), "}"),

    expression_statement: ($) => seq($._expression, ";"),

    local_variable_declaration: ($) =>
      choice(
        seq(
          optional($._metadata),
          $.initialized_variable_definition,
          ";",
        ),
        seq(
          optional($._metadata),
          $.pattern_variable_declaration,
          ";",
        ),
      ),

    initialized_variable_definition: ($) =>
      seq(
        $._declared_identifier,
        optional(seq("=", field("value", $._expression))),
        repeat(seq(",", $.initialized_identifier)),
      ),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          "(",
          $._expression,
          optional(seq("case", $._guarded_pattern)),
          ")",
          field("consequence", $._statement),
          optional(seq("else", field("alternative", $._statement))),
        ),
      ),

    for_statement: ($) =>
      seq(
        optional("await"),
        "for",
        "(", $._for_loop_parts, ")",
        field("body", $._statement),
      ),

    _for_loop_parts: ($) =>
      choice(
        // for-in loop
        seq(
          optional($._metadata),
          choice($._declared_identifier, $.identifier),
          "in",
          field("value", $._expression),
        ),
        // C-style for loop
        seq(
          optional(
            choice(
              field("init", $.local_variable_declaration),
              seq(commaSep(field("init", $._expression)), ";"),
            ),
          ),
          field("condition", optional($._expression)),
          ";",
          commaSep(field("update", $._expression)),
        ),
        // Pattern for-in loop (Dart 3.0)
        seq(
          optional($._metadata),
          choice("final", "var"),
          $._outer_pattern,
          "in",
          field("value", $._expression),
        ),
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.parenthesized_expression),
        field("body", $._statement),
      ),

    do_statement: ($) =>
      seq(
        "do",
        field("body", $._statement),
        "while",
        field("condition", $.parenthesized_expression),
        ";",
      ),

    // --- Switch ---

    switch_statement: ($) =>
      seq(
        "switch",
        field("condition", $.parenthesized_expression),
        field("body", $.switch_block),
      ),

    switch_block: ($) =>
      seq(
        "{",
        repeat($.switch_statement_case),
        optional($.switch_statement_default),
        "}",
      ),

    switch_statement_case: ($) =>
      seq(
        repeat($.label),
        "case",
        $._guarded_pattern,
        ":",
        repeat($._statement),
      ),

    switch_statement_default: ($) =>
      seq(repeat($.label), "default", ":", repeat($._statement)),

    switch_expression: ($) =>
      seq(
        "switch",
        field("condition", $.parenthesized_expression),
        field("body", seq("{", commaSepTrailingComma($.switch_expression_case), "}")),
      ),

    switch_expression_case: ($) =>
      seq($._guarded_pattern, "=>", $._expression),

    // --- Exception handling ---

    try_statement: ($) =>
      seq(
        "try",
        field("body", $.block),
        optional(
          choice(
            $.finally_clause,
            seq(repeat1($._on_part), optional($.finally_clause)),
          ),
        ),
      ),

    _on_part: ($) =>
      choice(
        seq($.catch_clause, $.block),
        seq("on", $._type_not_void, optional($.catch_clause), $.block),
      ),

    catch_clause: ($) =>
      seq("catch", "(", field("exception", $.identifier), optional(seq(",", field("stack_trace", $.identifier))), ")"),

    finally_clause: ($) => seq("finally", $.block),

    // --- Jump statements ---

    break_statement: ($) => seq("break", optional($.identifier), ";"),

    rethrow_statement: (_) => seq("rethrow", ";"),

    return_statement: ($) => seq("return", optional($._expression), ";"),

    assert_statement: ($) => seq($.assertion, ";"),

    assertion: ($) =>
      seq("assert", "(", $._expression, optional(seq(",", $._expression)), optional(","), ")"),

    // ========================================================================
    // Function signatures and bodies (Phase 7)
    // ========================================================================

    function_signature: ($) =>
      seq(
        optional(field("return_type", $.type)),
        field("name", $._function_name),
        field("parameters", $._formal_parameter_part),
      ),

    // All built-in identifiers can be used as function/method names
    _function_name: ($) => $.identifier,

    function_body: ($) =>
      choice(
        seq(optional("async"), "=>", $._expression, ";"),
        seq(optional(choice("async", "async*", "sync*")), $.block),
        $.native,
      ),

    _final_const_var_or_type: ($) =>
      choice(
        seq(optional("late"), "final", optional($.type)),
        seq("const", optional($.type)),
        seq(optional("late"), $._var_or_type),
      ),

    _var_or_type: ($) =>
      choice($.type, seq("var", optional($.type))),

    _final_var_or_type: ($) =>
      choice(
        "var",
        "final",
        seq(optional("final"), $.type),
      ),

    // --- Class members ---

    declaration: ($) =>
      choice(
        seq(
          $.constant_constructor_signature,
          optional(choice($.redirection, $.initializers)),
        ),
        seq(
          $.constructor_signature,
          optional(choice($.redirection, $.initializers)),
        ),
        seq($.external, optional("const"), $.factory_constructor_signature),
        seq("external", $.constant_constructor_signature),
        $.redirecting_factory_constructor_signature,
        seq("external", $.constructor_signature),
        seq(optional($._external_and_static), $.getter_signature),
        seq(optional($._external_and_static), $.setter_signature),
        seq(optional($.external), $.operator_signature),
        seq(optional($._external_and_static), $.function_signature),
        seq("static", $.function_signature),
        // Static field declarations
        seq(
          "static",
          choice(
            seq(
              choice("final", "const"),
              optional($.type),
              $.static_final_declaration_list,
            ),
            seq(
              "late",
              choice(
                seq("final", optional($.type), $.initialized_identifier_list),
                seq($._var_or_type, $.initialized_identifier_list),
              ),
            ),
            seq($._var_or_type, $.initialized_identifier_list),
          ),
        ),
        // Covariant field declarations
        seq(
          "covariant",
          choice(
            seq(
              "late",
              choice(
                seq("final", optional($.type), $.identifier_list),
                seq($._var_or_type, $.initialized_identifier_list),
              ),
            ),
            seq($._var_or_type, $.initialized_identifier_list),
          ),
        ),
        // Instance field declarations
        seq(optional("late"), "final", optional($.type), $.initialized_identifier_list),
        seq(optional("late"), $._var_or_type, $.initialized_identifier_list),
        seq("const", optional($.type), $.static_final_declaration_list),
        // Abstract field declarations
        seq("abstract", "final", optional($.type), $.identifier_list),
        seq("abstract", optional($.type), $.identifier_list),
        seq("abstract", "covariant", "final", optional($.type), $.identifier_list),
        seq("abstract", "covariant", optional($.type), $.identifier_list),
        // External field declarations
        seq($.external, optional("static"), optional("covariant"), optional(choice("final", "var")), optional($.type), $.identifier_list),
      ),

    _external_and_static: ($) => seq($.external, optional("static")),

    // --- Constructors ---
