grammars/tree-sitter-dart/test/corpus/patterns.txt
================================================================================
Switch with pattern matching
================================================================================

void main() {
  switch (obj) {
    case int x when x > 0:
      print(x);
    default:
      break;
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    signature: (function_signature
      return_type: (type
        (void_type))
      name: (identifier)
      parameters: (formal_parameter_list))
    body: (function_body
      (block
        (switch_statement
          condition: (parenthesized_expression
            (identifier))
          body: (switch_block
            (switch_statement_case
              (variable_pattern
                (type
                  (type_identifier))
                name: (identifier))
              (relational_expression
                (identifier)
                (relational_operator)
                (decimal_integer_literal))
              (expression_statement
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (identifier)))))
            (switch_statement_default
              (break_statement))))))))

================================================================================
Empty record pattern assignment
================================================================================

void main() {
  () = x;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    signature: (function_signature
      return_type: (type
        (void_type))
      name: (identifier)
      parameters: (formal_parameter_list))
    body: (function_body
      (block
        (expression_statement
          (pattern_assignment
            (record_pattern)
            (identifier)))))))

================================================================================
Pattern variable declaration
================================================================================

void main() {
  var (a, b) = (1, 2);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    signature: (function_signature
      return_type: (type
        (void_type))
      name: (identifier)
      parameters: (formal_parameter_list))
    body: (function_body
      (block
        (local_variable_declaration
          (pattern_variable_declaration
            (record_pattern
              (constant_pattern
                (identifier))
              (constant_pattern
                (identifier)))
            (record_literal
              (record_field
                (decimal_integer_literal))
              (record_field
                (decimal_integer_literal)))))))))

================================================================================
If-case statement
================================================================================

void main() {
  if (obj case [int first, ...]) {
    print(first);
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    signature: (function_signature
      return_type: (type
        (void_type))
      name: (identifier)
      parameters: (formal_parameter_list))
    body: (function_body
      (block
        (if_statement
          (identifier)
          (list_pattern
            (variable_pattern
              (type
                (type_identifier))
              name: (identifier))
            (rest_pattern))
          consequence: (block
            (expression_statement
              (call_expression
                function: (identifier)
                arguments: (arguments
                  (identifier))))))))))

================================================================================
Switch expression
================================================================================

void main() {
  var x = switch (obj) {
    int n => n.toString(),
    _ => 'other',
  };
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    signature: (function_signature
      return_type: (type
        (void_type))
      name: (identifier)
      parameters: (formal_parameter_list))
    body: (function_body
      (block
        (local_variable_declaration
          (initialized_variable_definition
            name: (identifier)
            value: (switch_expression
              condition: (parenthesized_expression
                (identifier))
              body: (switch_expression_case
                (variable_pattern
                  (type
                    (type_identifier))
                  name: (identifier))
                (call_expression
                  function: (member_expression
                    object: (identifier)
                    property: (identifier))
                  arguments: (arguments)))
              body: (switch_expression_case
                (constant_pattern
                  (identifier))
                (string_literal
                  (string_literal_single_quotes
                    (template_chars_single_single)))))))))))

================================================================================
Const record pattern
================================================================================

void f(x) {
  if (x case const (1, 2, 3)) {}
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    signature: (function_signature
      return_type: (type
        (void_type))
      name: (identifier)
      parameters: (formal_parameter_list
        (formal_parameter
          (identifier))))
    body: (function_body
      (block
        (if_statement
          (identifier)
          (constant_pattern
            (record_field
              (decimal_integer_literal))
            (record_field
              (decimal_integer_literal))
            (record_field
              (decimal_integer_literal)))
          consequence: (block))))))

================================================================================
Empty switch expression
================================================================================

f(x) => switch(x) {};

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    signature: (function_signature
      name: (identifier)
      parameters: (formal_parameter_list
        (formal_parameter
          (identifier))))
    body: (function_body
      (switch_expression
        condition: (parenthesized_expression
          (identifier))))))

================================================================================
Object pattern with labeled fields
================================================================================

class Point { final int x; final int y; Point(this.x, this.y); }
void main() {
  var p = Point(1, 2);
  switch (p) {
    case Point(x: var px, y: var py) when px > py:
      print(px);
  }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (identifier)
    body: (class_body
      (class_member
        (declaration
          (type
            (type_identifier))
          (initialized_identifier_list
            (initialized_identifier
              name: (identifier)))))
      (class_member
        (declaration
          (type
            (type_identifier))
          (initialized_identifier_list
            (initialized_identifier
              name: (identifier)))))
      (class_member
        (declaration
          (constructor_signature
            name: (identifier)
            parameters: (formal_parameter_list
              (formal_parameter
                (constructor_param
                  (identifier)))
              (formal_parameter
                (constructor_param
                  (identifier)))))))))
  (function_declaration
    signature: (function_signature
      return_type: (type
        (void_type))
      name: (identifier)
      parameters: (formal_parameter_list))
    body: (function_body
      (block
        (local_variable_declaration
          (initialized_variable_definition
            name: (identifier)
            value: (call_expression
              function: (identifier)
              arguments: (arguments
                (decimal_integer_literal)
                (decimal_integer_literal)))))
        (switch_statement
          condition: (parenthesized_expression
            (identifier))
          body: (switch_block
            (switch_statement_case
              (object_pattern
                (type_identifier)
                (label
                  (identifier))
                (variable_pattern
                  name: (identifier))
                (label
                  (identifier))
                (variable_pattern
                  name: (identifier)))
              (relational_expression
                (identifier)
                (relational_operator)
                (identifier))
              (expression_statement
                (call_expression
                  function: (identifier)
                  arguments: (arguments
                    (identifier)))))))))))
